[gd_scene load_steps=29 format=2]

[ext_resource path="res://Scenes/Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Player/PlayerFSM.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Player/StateAir.gd" type="Script" id=3]
[ext_resource path="res://Scenes/Player/StateIdle.gd" type="Script" id=4]
[ext_resource path="res://Scenes/Player/StateJump.gd" type="Script" id=5]
[ext_resource path="res://Scenes/Player/StateLadder.gd" type="Script" id=6]
[ext_resource path="res://Scenes/Player/StateSwim.gd" type="Script" id=7]
[ext_resource path="res://Scenes/Player/StateWalk.gd" type="Script" id=8]
[ext_resource path="res://Scenes/Water/Waves.tscn" type="PackedScene" id=9]
[ext_resource path="res://Sprites/Hero/adventurer-idle-01.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Hero/adventurer-idle-02.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Hero/adventurer-jump-00.png" type="Texture" id=12]
[ext_resource path="res://Sprites/Hero/adventurer-idle-00.png" type="Texture" id=13]
[ext_resource path="res://Sprites/Hero/adventurer-jump-02.png" type="Texture" id=14]
[ext_resource path="res://Sprites/Hero/adventurer-run-01.png" type="Texture" id=15]
[ext_resource path="res://Sprites/Hero/adventurer-run-00.png" type="Texture" id=16]
[ext_resource path="res://Sprites/Hero/adventurer-jump-01.png" type="Texture" id=17]
[ext_resource path="res://Sprites/Hero/adventurer-jump-03.png" type="Texture" id=18]
[ext_resource path="res://Sprites/Hero/adventurer-run-02.png" type="Texture" id=19]
[ext_resource path="res://Sprites/Hero/adventurer-run-05.png" type="Texture" id=20]
[ext_resource path="res://Sprites/Hero/adventurer-run-04.png" type="Texture" id=21]
[ext_resource path="res://Sprites/Hero/adventurer-run-03.png" type="Texture" id=22]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8.49615, 20.1387 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 13 ), ExtResource( 10 ), ExtResource( 11 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 16 ), ExtResource( 15 ), ExtResource( 19 ), ExtResource( 22 ), ExtResource( 21 ), ExtResource( 20 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
}, {
"frames": [ ExtResource( 12 ), ExtResource( 17 ), ExtResource( 14 ), ExtResource( 18 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
} ]

[sub_resource type="Animation" id=3]
resource_name = "idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "idle" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[sub_resource type="Animation" id=6]
resource_name = "jump"
tracks/0/type = "value"
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "jump" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=4]
resource_name = "walk"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "walk" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.3, 0.5, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="CapsuleShape2D" id=5]
radius = 9.79369
height = 12.3406

[node name="Player" type="KinematicBody2D"]
collision_layer = 3
collision_mask = 0
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Timers" type="Node2D" parent="."]

[node name="JumpTimer" type="Timer" parent="Timers"]
wait_time = 0.06
one_shot = true

[node name="FloorTimer" type="Timer" parent="Timers"]
wait_time = 0.1
one_shot = true

[node name="LadderTimer" type="Timer" parent="Timers"]
wait_time = 0.2
one_shot = true

[node name="PlatformTimer" type="Timer" parent="Timers"]
wait_time = 0.2
one_shot = true

[node name="PlayerStates" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="Air" type="Node2D" parent="PlayerStates"]
script = ExtResource( 3 )

[node name="Idle" type="Node2D" parent="PlayerStates"]
script = ExtResource( 4 )
tag = "idle"

[node name="Jump" type="Node2D" parent="PlayerStates"]
script = ExtResource( 5 )
tag = "jump"

[node name="Ladder" type="Node2D" parent="PlayerStates"]
script = ExtResource( 6 )

[node name="Swim" type="Node2D" parent="PlayerStates"]
script = ExtResource( 7 )
tag = "swim"

[node name="Walk" type="Node2D" parent="PlayerStates"]
script = ExtResource( 8 )
tag = "walk"

[node name="Waves" parent="." instance=ExtResource( 9 )]
position = Vector2( 0, 15 )
z_index = 0
amount = 20
preprocess = 1.0
explosiveness = 0.0

[node name="TerrainBox" type="CollisionShape2D" parent="."]
z_index = 100
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -5.69732, -6.74062 )
scale = Vector2( 1.55893, 1.44997 )
frames = SubResource( 2 )
animation = "jump"
frame = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="AnimatedSprite"]
anims/idle = SubResource( 3 )
anims/jump = SubResource( 6 )
anims/walk = SubResource( 4 )

[node name="KinematicBody2D" type="KinematicBody2D" parent="."]
z_index = 5
collision_layer = 1024
collision_mask = 32768
__meta__ = {
"_edit_lock_": true
}

[node name="HurtBox" type="CollisionShape2D" parent="KinematicBody2D"]
z_index = 100
shape = SubResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="Tween" type="Tween" parent="."]
[connection signal="timeout" from="Timers/PlatformTimer" to="." method="_on_PlatformTimer_timeout"]
